[project]
name = "llm"
version = "0.1.0"
description = ""
authors = [
    {name = "nana-bug",email = ""}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black (>=24.10.0,<25.0.0)",
    "flake8 (>=7.1.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
